// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StatusIcon expect to render CheckCircleIcon 1`] = `
initialize {
  "0": Object {
    "attribs": Object {
      "aria-hidden": "true",
      "fill": "green",
      "height": "1em",
      "role": "img",
      "style": "vertical-align:-0.125em",
      "viewBox": "0 0 512 512",
      "width": "1em",
    },
    "children": Array [
      Object {
        "attribs": Object {
          "d": "M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z",
          "transform": "",
        },
        "children": Array [],
        "name": "path",
        "namespace": "http://www.w3.org/2000/svg",
        "next": null,
        "parent": [Circular],
        "prev": null,
        "type": "tag",
        "x-attribsNamespace": Object {
          "d": undefined,
          "transform": undefined,
        },
        "x-attribsPrefix": Object {
          "d": undefined,
          "transform": undefined,
        },
      },
    ],
    "name": "svg",
    "namespace": "http://www.w3.org/2000/svg",
    "next": null,
    "parent": null,
    "prev": null,
    "root": Object {
      "attribs": Object {},
      "children": Array [
        [Circular],
      ],
      "name": "root",
      "namespace": "http://www.w3.org/1999/xhtml",
      "next": null,
      "parent": null,
      "prev": null,
      "type": "root",
      "x-attribsNamespace": Object {},
      "x-attribsPrefix": Object {},
    },
    "type": "tag",
    "x-attribsNamespace": Object {
      "aria-hidden": undefined,
      "fill": undefined,
      "height": undefined,
      "role": undefined,
      "style": undefined,
      "viewBox": undefined,
      "width": undefined,
    },
    "x-attribsPrefix": Object {
      "aria-hidden": undefined,
      "fill": undefined,
      "height": undefined,
      "role": undefined,
      "style": undefined,
      "viewBox": undefined,
      "width": undefined,
    },
  },
  "_root": [Circular],
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "normalizeWhitespace": false,
    "withDomLvl1": true,
    "xml": false,
  },
}
`;

exports[`StatusIcon expect to render TimesCircleIcon 1`] = `
initialize {
  "0": Object {
    "attribs": Object {
      "aria-hidden": "true",
      "fill": "red",
      "height": "1em",
      "role": "img",
      "style": "vertical-align:-0.125em",
      "viewBox": "0 0 512 512",
      "width": "1em",
    },
    "children": Array [
      Object {
        "attribs": Object {
          "d": "M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm121.6 313.1c4.7 4.7 4.7 12.3 0 17L338 377.6c-4.7 4.7-12.3 4.7-17 0L256 312l-65.1 65.6c-4.7 4.7-12.3 4.7-17 0L134.4 338c-4.7-4.7-4.7-12.3 0-17l65.6-65-65.6-65.1c-4.7-4.7-4.7-12.3 0-17l39.6-39.6c4.7-4.7 12.3-4.7 17 0l65 65.7 65.1-65.6c4.7-4.7 12.3-4.7 17 0l39.6 39.6c4.7 4.7 4.7 12.3 0 17L312 256l65.6 65.1z",
          "transform": "",
        },
        "children": Array [],
        "name": "path",
        "namespace": "http://www.w3.org/2000/svg",
        "next": null,
        "parent": [Circular],
        "prev": null,
        "type": "tag",
        "x-attribsNamespace": Object {
          "d": undefined,
          "transform": undefined,
        },
        "x-attribsPrefix": Object {
          "d": undefined,
          "transform": undefined,
        },
      },
    ],
    "name": "svg",
    "namespace": "http://www.w3.org/2000/svg",
    "next": null,
    "parent": null,
    "prev": null,
    "root": Object {
      "attribs": Object {},
      "children": Array [
        [Circular],
      ],
      "name": "root",
      "namespace": "http://www.w3.org/1999/xhtml",
      "next": null,
      "parent": null,
      "prev": null,
      "type": "root",
      "x-attribsNamespace": Object {},
      "x-attribsPrefix": Object {},
    },
    "type": "tag",
    "x-attribsNamespace": Object {
      "aria-hidden": undefined,
      "fill": undefined,
      "height": undefined,
      "role": undefined,
      "style": undefined,
      "viewBox": undefined,
      "width": undefined,
    },
    "x-attribsPrefix": Object {
      "aria-hidden": undefined,
      "fill": undefined,
      "height": undefined,
      "role": undefined,
      "style": undefined,
      "viewBox": undefined,
      "width": undefined,
    },
  },
  "_root": [Circular],
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "normalizeWhitespace": false,
    "withDomLvl1": true,
    "xml": false,
  },
}
`;
